# LeanEthereumReengineer

./: .gitignore  README.md
lean_client/: Cargo.toml
lean_client/chain/src/: config.rs
lean_client/containers/: Cargo.toml
lean_client/containers/src/: block.rs  checkpoint.rs  config.rs  lib.rs  slot.rs  ssz.rs  state.rs  types.rs  vote.rs
lean_client/containers/src/test_vectors/: block_processing.rs  mod.rs  runner.rs  state_transition.rs  vote_processing.rs
lean_client/containers/test_vectors/block_processing/: basic.yaml
lean_client/containers/test_vectors/state_transition/: basic.yaml
lean_client/containers/test_vectors/vote_processing/: justification.yaml
lean_client/containers/tests/: common.rs  main.rs  state_basic.rs  state_justifications.rs  state_process.rs  state_transition.rs
lean_client/fork_choice/: Cargo.toml
leanethereum/: Cargo.toml
