[package]
name = "containers"
version = "0.1.0"
edition = "2021"

[lib]
name = "containers"
path = "src/lib.rs"

[dependencies]
ssz = { git = "https://github.com/grandinetech/grandine", package = "ssz", branch = "develop", submodules = false }
ssz_derive = { git = "https://github.com/grandinetech/grandine", package = "ssz_derive", branch = "develop", submodules = false }
typenum = "1"

[dev-dependencies]
rstest = "0.18"
pretty_assertions = "1.4"
